[project]
name = "get-searched-reply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.33.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
search = "main:get_reply"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
